# running

./: index.html
2025-quiron-carrera-empresas/: AGENT.md  Makefile  README.md  analisis_anomalias.py  app.py  dashboard.py  download_clasificaciones.py  pyproject.toml
2025-quiron-carrera-empresas/data/: clasificaciones_2025.parquet
