[project]
name = "carrera-empresas-2025"
version = "0.1.0"
description = "Descarga y análisis de clasificaciones Carrera de las Empresas Quirón 2025"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "backoff>=2.2",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[tool.uv]
dev-dependencies = []
