[project]
name = "carrera-empresas-2025"
version = "0.1.0"
description = "Descarga y análisis de clasificaciones Carrera de las Empresas Quirón 2025"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "backoff>=2.2",
    "beautifulsoup4>=4.12",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[dependency-groups]
dev = []
